# menugen

./: .pre-commit-config.yaml  Makefile  __main__.py  main.py  pyproject.toml
menugen/: commonpatterns.py  generichandlers.py  handler.py  knownapps.py  menuentry.py  menugen.py
test/: test_commonpatterns.py  test_generichandlers.py  test_handler.py  test_knownapps.py  test_menuentry.py
